# cNPM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  otherFle.cpp  otherFle.h  package.json
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
